Translate from polish to english.

--- a/index.html
+++ b/index.html
@@ -16,40 +16,37 @@
     </style>
 </head>
 <body>
-
-<div class="container">
+<div id="container">
     <div>
-        <input id="inputName" placeholder="imię">
+        <input id="inputName" placeholder="name">
     </div>
     <div>
-        <input id="inputSurname" value="Snow" placeholder="nazwisko">
+        <input id="inputSurname" placeholder="surname">
     </div>
     <div>
-        <input id="inputAge" placeholder="wiek">
+        <input id="inputAge" placeholder="age">
     </div>
     <div>
-        <input id="inputRole" placeholder="rola">
+        <input id="inputRole" placeholder="role">
     </div>
-                <button id="addButton"></button>
+    <button id="addButton">add user</button>
 </div>
 <div class="people">
     <div class="people__name people__name__head">
-Imię
+        name
     </div>
     <div class="people__surname people__surname__head">
-Nazwisko
+        forname
     </div>
     <div class="people__age people__age__head">
-Wiek
+        age
     </div>
     <div class="people__role people__role__head">
-Rola
+        role
     </div>
 </div>
 <div id="records">
-
 </div>
-
 
 <script src="script.js"></script>
 </body>
